# mana-lang

./: .gitignore  .gitignore.txt  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  PRODUCTION_CHECKLIST.txt  README.md  RELEASE_NOTES_v1.0.0.md  THIRD_PARTY_LICENSES.md  TODO.md
.claude/: settings.local.json
.github/workflows/: build.yml.txt  ci.yml  release.yml
assets/: register-icon.bat  register-mana-filetype.reg
backend-cpp/: CppEmitter.cpp  CppEmitter.h  DocGenerator.cpp  DocGenerator.h  Symbol.h  mana_runtime.h
core/: Repl.h  main.cpp
docs/: ADVANCED_PATTERNS.md  BUILD_SYSTEM.md  ERROR_CATALOG.md  GETTING_STARTED.md  INSTALLATION.md  LANGUAGE_REFERENCE.md  LANGUAGE_SPEC.md  STDLIB.md  TUTORIAL.md  TUTORIAL_CLI_APP.md  VSCODE_SETUP.md  language-spec-v0.1.md.txt  language-todo.md  opengl-guide.md  opengl-quickstart.md  opengl-todo.md  style-guide.md.txt
editors/vscode-mana/: README.md  language-configuration.json  package-lock.json  package.json
editors/vscode-mana/icons/: mana-icon-theme.json
editors/vscode-mana/src/: extension.ts
editors/vscode-mana/syntaxes/: mana.tmLanguage.json
examples/: CMakeLists.txt  README.md  adt_test.cpp  adt_test.mana  array_fill_test.cpp  array_fill_test.mana  assert_fail_test.cpp  assert_fail_test.mana  assert_test.cpp  assert_test.mana  assoc_types.cpp  assoc_types.mana  async_test.mana  audio_demo.mana  binding_test.cpp  binding_test.mana  cast_test.cpp  cast_test.mana  char_test.cpp  char_test.mana  closures.cpp  closures.mana  closures_test.mana  comment_test.mana  compound.cpp  compound.mana  compound_test.cpp  compound_test.mana  const_error_test.mana  const_test.cpp  const_test.mana  dead_code_test.mana  default_params.cpp  default_params.mana  destructure.cpp  destructure.mana  destructure_test.cpp  destructure_test.mana  doc_test.mana  doc_test.md  (+158 more)
examples/graphics/: CMakeLists.txt  README.md  TODO.md  build.bat  cube.cpp  cube.mana  demo.cpp  demo.mana  graphics.mana  mana_graphics.h  mana_runtime.h  textured.mana  triangle.cpp  triangle.mana  voxel.cpp  voxel.mana  window.cpp  window.mana
examples/inference_build/: CMakeLists.txt
frontend/: Ast.h  AstDecl.h  AstDeclarations.h  AstExpressions.h  AstModule.h  AstNodes.h  AstPrinter.cpp  AstPrinter.h  AstStatements.h  Cache.h  Debug.h  Diagnostic.cpp  Diagnostic.h  Keywords.h  Lexer.cpp  Lexer.h  ModuleLoader.cpp  ModuleLoader.h  Parser.cpp  Parser.h  Semantic.cpp  Semantic.h  Symbol.h  Token.cpp  Token.h  Type.h  sample.astra
installer/: README.md  install.html  mana-init.ps1  mana-init.sh  mana-uninstall.ps1  package-release.ps1  package-release.sh
mana-lang/: mana-lang.sln
mana-lang/mana-compiler/: mana-compiler.vcxproj  mana-compiler.vcxproj.filters
mana-lang/tests/: sample.mana
mana-lang/tests/mana_tests/: mana_tests.cpp  mana_tests.vcxproj
middle/: DeadCodeElimination.cpp  DeadCodeElimination.h  ForLowering.cpp  ForLowering.h  Inlining.cpp  Inlining.h
scripts/: build.bat  build.sh  run_e2e_tests.bat  run_e2e_tests.sh  run_tests.bat
tests/: CMakeLists.txt  mana_runtime.h  match_still_works.mana  or_simple_test.cpp  or_simple_test.mana  return_coverage_test.mana  semicolon_minimal_test.cpp  semicolon_minimal_test.mana  struct_test.cpp  test_for.mana  test_for_in.mana  test_vnext.mana  vnext_phase1_test.cpp  vnext_phase1_test.mana  vnext_phase2_test.cpp  vnext_phase2_test.mana  vnext_phase3_test.cpp  vnext_phase3_test.mana  vnext_phase4_test.cpp  vnext_phase4_test.mana  vnext_phase5_test.cpp  vnext_phase5_test.mana
tests/e2e/: E2ETestRunner.h  e2e_tests.cpp
tests/e2e/tests/: 001_hello_world.mana  002_arithmetic.mana  003_variables.mana  004_if_else.mana  005_while_loop.mana  006_for_loop.mana  007_functions.mana  008_structs.mana  009_enums.mana  010_match.mana  011_closures.mana  012_fstrings.mana  013_arrays.mana  014_strings.mana  015_option.mana  016_result.mana  017_generics.mana  018_operators.mana  019_defer.mana  020_tuples.mana  021_type_alias.mana  022_const.mana  023_range.mana  024_hex_binary.mana  025_chars.mana  026_ternary.mana  027_hashmap.mana  028_loop.mana  029_assert.mana  030_stdlib.mana
tests/mana_tests/: mana_tests.vcxproj.filters
tests/playground/: CMakeLists.txt  error_handling.mana  hello_world.cpp  hello_world.mana  iterators.cpp  iterators.mana  loops.cpp  loops.mana  structs.cpp  structs.mana  variables.cpp  variables.mana  variants.cpp  variants.mana  when_expression.mana
tools/: CMakeLists.txt
tools/debug/: Debugger.cpp  Debugger.h  main.cpp
tools/fmt/: Formatter.cpp  Formatter.h
tools/lint/: Linter.cpp  Linter.h
tools/lsp/: LspServer.cpp  LspServer.h  main.cpp
tools/pkg/: PackageManager.cpp  PackageManager.h
tools/repl/: Repl.cpp  Repl.h
tools/test/: TestRunner.cpp  TestRunner.h
