cmake_minimum_required(VERSION 3.16)
project(mana_examples)
set(CMAKE_CXX_STANDARD 20)
add_executable(hashmap_test2 hashmap_test2.cpp)
add_executable(iter_test iter_test.cpp)
add_executable(iter_destructure iter_destructure.cpp)
add_executable(result_test result_test.cpp)
add_executable(default_params default_params.cpp)
add_executable(string_methods string_methods.cpp)
add_executable(file_io file_io.cpp)
add_executable(iter_methods iter_methods.cpp)
add_executable(slice_test slice_test.cpp)
add_executable(modules modules.cpp)
add_executable(multifile multifile.cpp)
add_executable(simple_multifile simple_multifile.cpp)
add_executable(binding_test binding_test.cpp)
add_executable(fstrings fstrings.cpp)
add_executable(async_test async_test.cpp)
add_executable(traits traits.cpp)
add_executable(trait_defaults trait_defaults.cpp)
add_executable(constraints constraints.cpp)
add_executable(assoc_types assoc_types.cpp)
add_executable(operator_test operator_test.cpp)
add_executable(static_test static_test.cpp)
add_executable(named_args named_args.cpp)
add_executable(struct_defaults struct_defaults.cpp)
add_executable(format_test format_test.cpp)
add_executable(closure_improvements closure_improvements.cpp)
add_executable(closures closures.cpp)
add_executable(optional_chaining optional_chaining.cpp)
add_executable(null_coalesce null_coalesce.cpp)
add_executable(type_aliases type_aliases.cpp)
add_executable(range_patterns range_patterns.cpp)
add_executable(exclusive_range_test exclusive_range_test.cpp)
add_executable(string_methods2 string_methods2.cpp)
add_executable(adt_test adt_test.cpp)
add_executable(pattern_simple pattern_simple.cpp)
add_executable(pattern_test pattern_test.cpp)
add_executable(impl_simple_test impl_simple_test.cpp)
add_executable(fstring_method_test fstring_method_test.cpp)
add_executable(hashmap_test hashmap_test.cpp)
add_executable(string_methods_test string_methods_test.cpp)
add_executable(stdlib_test stdlib_test.cpp)
add_executable(features_test features_test.cpp)
add_executable(testing_example testing_example.cpp)
add_executable(simple_test simple_test.cpp)
add_executable(multiline_string_test multiline_string_test.cpp)
add_executable(dead_code_test dead_code_test.cpp)
add_executable(const_fold_test const_fold_test.cpp)
add_executable(bool_test bool_test.cpp)
add_executable(stdlib_extended_test stdlib_extended_test.cpp)
add_executable(inference_test inference_test.cpp)
